--- a/view/searchScreen.fxml
+++ b/view/searchScreen.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
@@ -13,26 +12,16 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
-      <TextField fx:id="userSearch" layoutX="14.0" layoutY="100.0" prefHeight="32.0" prefWidth="434.0">
+      <TextField fx:id="userSearch" layoutX="29.0" layoutY="116.0" prefHeight="32.0" prefWidth="396.0">
          <effect>
             <InnerShadow />
          </effect>
       </TextField>
-      <Button fx:id="searchButton" layoutX="472.0" layoutY="100.0" mnemonicParsing="false" onAction="#search" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="searchButton" layoutX="446.0" layoutY="116.0" mnemonicParsing="false" onAction="#search" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
          <effect>
             <InnerShadow />
          </effect>
       </Button>
-      <TextArea fx:id="searchInput" layoutX="63.0" layoutY="150.0" prefHeight="38.0" prefWidth="451.0" visible="false" />
-      <TextArea layoutX="14.0" layoutY="199.0" prefHeight="311.0" prefWidth="557.0">
-         <effect>
-            <InnerShadow />
-         </effect>
-      </TextArea>
-      <TextArea fx:id="result1" layoutX="22.0" layoutY="217.0" prefHeight="67.0" prefWidth="434.0" />
-      <TextArea fx:id="result2" layoutX="22.0" layoutY="284.0" prefHeight="67.0" prefWidth="434.0" />
-      <TextArea fx:id="result3" layoutX="22.0" layoutY="355.0" prefHeight="67.0" prefWidth="434.0" />
-      <TextArea fx:id="result4" layoutX="22.0" layoutY="422.0" prefHeight="67.0" prefWidth="434.0" />
       <ImageView fitHeight="67.0" fitWidth="63.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/profileImg.png" />
@@ -48,10 +37,6 @@
             <Image url="@../../images/cartImg.png" />
          </image>
       </ImageView>
-      <Button fx:id="detailsOne" layoutX="461.0" layoutY="221.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
-      <Button fx:id="detailsTwo" layoutX="461.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
-      <Button fx:id="detailsThree" layoutX="461.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
-      <Button fx:id="detailsFour" layoutX="461.0" layoutY="426.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
-      <ListView fx:id="results" layoutX="16.0" layoutY="136.0" prefHeight="60.0" prefWidth="511.0" />
+      <ListView fx:id="results" fixedCellSize="55.0" layoutX="29.0" layoutY="179.0" prefHeight="283.0" prefWidth="511.0" />
    </children>
 </AnchorPane>
