--- a/view/homeScreen.fxml
+++ b/view/homeScreen.fxml
@@ -2,14 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeScreenController">
    <children>
@@ -31,17 +29,12 @@
                </children>
             </HBox>
             <ListView fx:id="toCheckIn" layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="536.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="-6.0" stroke="BLACK" strokeType="INSIDE" width="591.0" />
-            <ImageView fitHeight="52.0" fitWidth="53.0" layoutX="2.0" layoutY="3.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/profileImg.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="52.0" fitWidth="53.0" layoutX="60.0" layoutY="4.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/cartImg.png" />
-               </image>
-            </ImageView>
+            <ButtonBar layoutX="-3.0" prefHeight="60.0" prefWidth="587.0" style="-fx-background-color: blue;">
+               <buttons>
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToProfile" text="Profile" translateX="-427.0" translateY="-15.0" />
+                  <Button mnemonicParsing="false" onAction="#switchToOrderScreen" text="Cart" translateX="-437.0" translateY="-15.0" />
+               </buttons>
+            </ButtonBar>
          </children>
       </Pane>
    </children>
