--- a/view/itemDetailsScreen.fxml
+++ b/view/itemDetailsScreen.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -27,21 +27,13 @@
             <Text fx:id="price" layoutX="224.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" wrappingWidth="114.96484756469727" />
             <Text fx:id="model" layoutX="224.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model:" wrappingWidth="114.96485114097595" />
             <Text fx:id="barcode" layoutX="379.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Barcode:  " wrappingWidth="114.96484756469727" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="640.0" />
-            <ImageView fx:id="profileButton" fitHeight="51.0" fitWidth="88.0" layoutX="5.0" layoutY="5.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/profileImg.png" />
-               </image></ImageView>
-            <ImageView fx:id="homeButton" fitHeight="51.0" fitWidth="51.0" layoutX="64.0" layoutY="6.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/homeImg.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="cartButton" fitHeight="51.0" fitWidth="51.0" layoutX="121.0" layoutY="6.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/cartImg.png" />
-               </image>
-            </ImageView>
+            <ButtonBar layoutX="-8.0" prefHeight="60.0" prefWidth="650.0" style="-fx-background-color: blue;">
+               <buttons>
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToProfile" text="Profile" translateX="-397.0" translateY="-15.0" />
+                  <Button mnemonicParsing="false" onAction="#goHome" text="Home" translateX="-407.0" translateY="-15.0" />
+                  <Button mnemonicParsing="false" onAction="#goToCart" text="Cart" translateX="-417.0" translateY="-15.0" />
+               </buttons>
+            </ButtonBar>
       </children>
     </AnchorPane>
   </children>
