--- a/view/orderScreen.fxml
+++ b/view/orderScreen.fxml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderScreenController">
    <children>
-      <ListView layoutX="30.0" layoutY="120.0" prefHeight="294.0" prefWidth="402.0" style="-fx-background-color: GRAY;" />
       <Label layoutX="30.0" layoutY="96.0" prefHeight="17.0" prefWidth="123.0" text="Your order" />
-      <TextField layoutX="440.0" layoutY="144.0" prefHeight="31.0" prefWidth="139.0" text="Total: " />
       <Button layoutX="435.0" layoutY="214.0" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Continue Shopping" />
-      <Button layoutX="461.0" layoutY="292.0" mnemonicParsing="false" text="Place Order" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
-      <ImageView fitHeight="54.0" fitWidth="59.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/profileImg.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="54.0" fitWidth="59.0" layoutX="54.0" layoutY="2.0" onMouseClicked="#goHome" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/homeImg.png" />
-         </image>
-      </ImageView>
+      <Button layoutX="461.0" layoutY="292.0" mnemonicParsing="false" onAction="#placeOrder" text="Place Order" />
+      <TextArea fx:id="orderText" layoutX="30.0" layoutY="120.0" prefHeight="294.0" prefWidth="402.0" />
+      <Text fx:id="totalText" layoutX="448.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" wrappingWidth="122.9999920129776">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <ButtonBar prefHeight="60.0" prefWidth="584.0" style="-fx-background-color: blue;">
+        <buttons>
+          <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToProfile" text="Profile" translateX="-425.0" translateY="-15.0" />
+            <Button mnemonicParsing="false" onAction="#goHome" text="Home" translateX="-435.0" translateY="-15.0" />
+        </buttons>
+      </ButtonBar>
    </children>
 </Pane>
