--- a/view/searchScreen.fxml
+++ b/view/searchScreen.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
       <TextField fx:id="userSearch" layoutX="29.0" layoutY="116.0" prefHeight="32.0" prefWidth="396.0">
          <effect>
             <InnerShadow />
@@ -22,21 +19,13 @@
             <InnerShadow />
          </effect>
       </Button>
-      <ImageView fitHeight="67.0" fitWidth="63.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/profileImg.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="67.0" fitWidth="63.0" layoutX="63.0" layoutY="4.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/homeImg.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="67.0" fitWidth="72.0" layoutX="126.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/cartImg.png" />
-         </image>
-      </ImageView>
-      <ListView fx:id="results" onMouseClicked="#navigateToItemDetailScreen" fixedCellSize="55.0" layoutX="29.0" layoutY="179.0" prefHeight="283.0" prefWidth="511.0" />
+      <ListView fx:id="results" fixedCellSize="55.0" layoutX="29.0" layoutY="179.0" onMouseClicked="#navigateToItemDetailScreen" prefHeight="283.0" prefWidth="511.0" />
+      <ButtonBar layoutX="-1.0" prefHeight="60.0" prefWidth="587.0" style="-fx-background-color: blue;">
+         <buttons>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToProfile" text="Profile" translateX="-342.0" translateY="-15.0" />
+            <Button mnemonicParsing="false" onAction="#goHome" text="Home" translateX="-353.0" translateY="-15.0" />
+            <Button mnemonicParsing="false" onAction="#goToCart" text="Cart" translateX="-364.0" translateY="-15.0" />
+         </buttons>
+      </ButtonBar>
    </children>
 </AnchorPane>
